# aiowin

./: README.md  pyproject.toml
examples/: ex_event.py  ex_fileio.py  ex_pipe.py  ex_stdin.py
src/win_asyncio_io/: __init__.py  fileio.py  pipe.py  stdin.py  utils.py  win32event.py  winapi.py
tests/: test_fileio.py  test_pipe.py  test_win32event.py
